[package]
name = "netcat"
version = "0.1.0"
authors = ["Neve Noomo <d3ad.l1n3@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibverbs = {git = "https://github.com/nevenoomo/rust-ibverbs"}
rand = "0.7.2"
serde = {version = "1.0.104", features = ["derive"] }
bincode = "1.2.1"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "rpp_bench"
harness = false

[profile.bench]
opt-level = 3
lto = true