[package]
name = "netcat"
version = "0.1.0"
authors = ["Neve Noomo <d3ad.l1n3@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
xor_slice_hash = []

[dependencies]
ibverbs = {git = "https://github.com/nevenoomo/rust-ibverbs"}
rand = "0.7.3"
serde = {version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
bincode = "1.2.1"
hdrhistogram = "7.0.0"
newtype_derive = "0.1.6"
custom_derive = "0.1.7"
clap = "2.33.0" 
console = "0.11.2"
dialoguer = "0.6.2"
indicatif = "0.14.0"

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "rpp_bench"
harness = false

[profile.bench]
opt-level = 3
lto = true